--- a/data/covid-19/viz.html
+++ b/data/covid-19/viz.html
@@ -65,6 +65,7 @@
 	function boxLine(conf) {
 		return `<a-box></a-box>`
 	}
+
 	</script>
 </head>
 <body>
@@ -73,8 +74,8 @@
 
 
 	  <a-assets>
-	    <a-asset-item id="xls" response-type="blob" src="COVID-19-geographic-disbtribution-worldwide-2020-03-17.xlsx"></a-asset-item>
-	    <!-- <a-asset-item id="xls" response-type="blob" src="https://www.ecdc.europa.eu/sites/default/files/documents/COVID-19-geographic-disbtribution-worldwide-2020-03-17.xlsx"></a-asset-item> -->
+	  	<!-- https://www.ecdc.europa.eu/sites/default/files/documents/COVID-19-geographic-disbtribution-worldwide.csv -->
+	    <a-asset-item id="xls" response-type="blob" src="COVID-19-geographic-disbtribution-worldwide.xlsx"></a-asset-item>
 
 	  </a-assets>
 
@@ -97,7 +98,7 @@
     		user's default angle. Some devices use magnetometer for resolving the
     		camera's default angle
     	-->
-    	<a-entity rotation="0 45 0">
+    	<a-entity rotation="0 55 0">
 	    	<a-entity id="info-board" position="0 2 -3.6">
 	    		<a-box color="#444444" depth="0.1" width="2">
 	    			<a-text id="as-of-date" value="Work in progress,\ndata as of:\n" position="0 0 0.1" align="center"></a-text>
@@ -188,31 +189,41 @@
   			const sortKey = 'confCases';
   			const maxHeight = 5;
   			arr.sort((a, b) => b[sortKey] - a[sortKey]);
-  			// console.log(arr[0]);
-  			const maxVal = arr[1].confCases;
-  			const scale = maxHeight/maxVal;
+  			const casesScale = maxHeight/arr[1]['confCases'];
+  			const deathsScale = maxHeight/arr[1]['deaths'];
   			const graph = document.querySelector('#graph');
-  			// the future has not been written, there is no fate but that which we make four ourselves
+  			
   			for (let i = 0; i < arr.length; i++) {
-  				const val = arr[i][sortKey]*scale;
-  				const name = arr[i].name.replace(/_/g, '\n');
   				const cases = arr[i].confCases;
-  				const deaths = arr[i].deaths;
-					// graph.innerHTML += `<a-box position="${i-2} 0 -4" height="${val*scale}"></a-box>`
+				// graph.innerHTML += `<a-box position="${i-2} 0 -4" height="${scaledCases*casesScale}"></a-box>`
+				// assume all deaths count as cases
+				if (cases) {
+	  				const deaths = arr[i].deaths;
+	  				const scaledCases = arr[i]['confCases']*casesScale;
+	  				// const scaledDeaths = arr[i]['deaths']*deathsScale;
+	  				const name = arr[i].name.replace(/_/g, '\n');
 
-					if (cases) {
-						const box = document.createElement('a-box');
-						box.setAttribute('position', `${i-2} ${val/2} -4`);
-						box.setAttribute('height', val);
-						box.setAttribute('color', i%2 ? '#777777' : '#999999');
-						graph.appendChild(box);
+					const aBox = document.createElement('a-box');
+					aBox.setAttribute('position', `${i-2} ${scaledCases/2} -4`);
+					aBox.setAttribute('height', scaledCases);
+					aBox.setAttribute('color', i%2 ? '#777777' : '#999999');
+					graph.appendChild(aBox);
 
-						const text = document.createElement('a-text');
-						text.setAttribute('position', `${i-2} ${val/2} -3`);
-						text.setAttribute('align', 'center');
-						text.setAttribute('value', `${name}\nc: ${cases}\nd: ${deaths}`);
-						graph.appendChild	(text);
-					}
+					// const deathBox = document.createElement('a-box');
+					// // const deathHeight = dea
+					// deathBox.setAttribute('position', `${i-2} ${scaledDeaths/2} -5`);
+					// deathBox.setAttribute('height', scaledDeaths);
+					// deathBox.setAttribute('color', i%2 ? '#777777' : '#999999');
+					// graph.appendChild(deathBox);
+
+					const text = document.createElement('a-text');
+					text.setAttribute('position', `${i-2} ${scaledCases/2} -3.5`);
+					text.setAttribute('align', 'center');
+					const ratio = (cases / deaths).toFixed(1);
+					const percent = (100 * deaths / cases).toFixed(1);
+					text.setAttribute('value', `${name}\nc: ${cases}\nd: ${deaths}\nd%:${percent}`);
+					graph.appendChild	(text);
+				}
   			}
 
   			// finally, fix graph's z rotation to ensure mobile devizes are facing -Z
